# effectful-zoo

./: LICENSE  cabal.project  effectful-zoo.cabal
.github/workflows/: haskell.yml
components/amazonka/Effectful/Zoo/Amazonka/: Api.hs  Data.hs  Dynamic.hs  Static.hs
components/amazonka/Effectful/Zoo/Amazonka/Api/: Discover.hs  Log.hs  Run.hs  Send.hs
components/amazonka/Effectful/Zoo/Amazonka/Data/: AwsEnv.hs  AwsError.hs  AwsLogEntry.hs  AwsLogLevel.hs  AwsRequest.hs  AwsResponse.hs  AwsService.hs
components/blockfrost/Effectful/Zoo/: Blockfrost.hs
components/blockfrost/Effectful/Zoo/Blockfrost/: Api.hs  Dynamic.hs  Types.hs
components/console/Effectful/Zoo/Console/: Dynamic.hs
components/console/Effectful/Zoo/Console/Dynamic/: Effect.hs  Run.hs
components/core/Effectful/Zoo/: Aeson.hs  Concurrent.hs  Core.hs  Environment.hs  Exception.hs  FileSystem.hs  Function.hs  Prim.hs  Process.hs  Resource.hs  Unsafe.hs
components/core/Effectful/Zoo/Concurrent/: Async.hs
components/core/Effectful/Zoo/Console/: Dynamic.hs  Effect.hs  Static.hs
components/core/Effectful/Zoo/Console/Data/: Writer.hs
components/core/Effectful/Zoo/Console/Dynamic/: Api.hs
components/core/Effectful/Zoo/Core/: Exception.hs  Function.hs  Prim.hs
components/core/Effectful/Zoo/Core/Error/: Dynamic.hs  Static.hs
components/core/Effectful/Zoo/DataLog/: Api.hs  Dynamic.hs  Static.hs
components/core/Effectful/Zoo/DataLog/Api/: Json.hs
components/core/Effectful/Zoo/DataLog/Data/: LogEntry.hs
components/core/Effectful/Zoo/DataLog/Dynamic/: Api.hs  Effect.hs
components/core/Effectful/Zoo/DataLog/Static/: Api.hs  Effect.hs
components/core/Effectful/Zoo/Error/: Dynamic.hs  Static.hs
components/core/Effectful/Zoo/Errors/: EnvironmentVariableInvalid.hs  EnvironmentVariableMissing.hs
components/core/Effectful/Zoo/Lazy/: Dynamic.hs
components/core/Effectful/Zoo/Log/: Api.hs  Dynamic.hs  Static.hs
components/core/Effectful/Zoo/Log/Api/: Generic.hs  LazyText.hs  Render.hs  String.hs  Text.hs
components/core/Effectful/Zoo/Log/Data/: LogMessage.hs  Logger.hs
components/core/Effectful/Zoo/Log/Dynamic/: Api.hs  Effect.hs
components/core/Effectful/Zoo/Log/Static/: Api.hs  Effect.hs
components/core/Effectful/Zoo/Reader/: Static.hs
components/datalog/Effectful/Zoo/DataLog/: Api.hs  Dynamic.hs  Static.hs
components/datalog/Effectful/Zoo/DataLog/Data/: DataLogger.hs  Logger.hs
components/hedgehog-test/: Main.hs
components/hedgehog-test/Effectful/Zoo/Hedgehog/Test/: HedgehogTest.hs  PropertySpec.hs
components/hedgehog/Effectful/Zoo/: Hedgehog.hs
components/hedgehog/Effectful/Zoo/Hedgehog/: Api.hs  Data.hs  Dynamic.hs  Effect.hs  Golden.hs  MonadTestProxy.hs  Run.hs
components/hedgehog/Effectful/Zoo/Hedgehog/Api/: Assert.hs  Classify.hs  Eval.hs  Failure.hs  Gen.hs  Hedgehog.hs  Journal.hs  MonadAssertion.hs  Process.hs  Range.hs  Run.hs  Stack.hs  Tasty.hs  Workspace.hs
components/hedgehog/Effectful/Zoo/Hedgehog/Api/Internal/: Cabal.hs  FilePath.hs  OS.hs
components/hedgehog/Effectful/Zoo/Hedgehog/Api/Internal/Cabal/: Types.hs
components/hedgehog/Effectful/Zoo/Hedgehog/Api/Process/: Internal.hs
components/hedgehog/Effectful/Zoo/Hedgehog/Api/Tasty/: Orphans.hs
components/hedgehog/Effectful/Zoo/Hedgehog/Data/: PackagePath.hs  ProjectRoot.hs  PropertyTest.hs  TestResult.hs  UnitTest.hs  Workspace.hs
components/hedgehog/Effectful/Zoo/Hedgehog/Effect/: Hedgehog.hs  HedgehogGen.hs  Run.hs
components/hunit/Effectful/Zoo/: HUnit.hs
components/log/Effectful/Zoo/Log/: Api.hs  Dynamic.hs  Effect.hs  Static.hs
components/log/Effectful/Zoo/Log/Api/: Generic.hs  LazyText.hs  Render.hs  String.hs  Text.hs
components/log/Effectful/Zoo/Log/Data/: LogMessage.hs  Logger.hs  Severity.hs
components/rds-data-test/Effectful/Zoo/RdsData/Test/: Cluster.hs  Env.hs  Workspace.hs
components/rds-data/Effectful/Zoo/: RdsData.hs
components/rds-data/Effectful/Zoo/RdsData/: Core.hs  Errors.hs  Migration.hs
components/rds-data/Effectful/Zoo/RdsData/Errors/: RdsDataError.hs
components/testcontainers-localstack/Effectful/Zoo/TestContainers/: LocalStack.hs
components/testcontainers-localstack/Effectful/Zoo/TestContainers/LocalStack/: Types.hs
