cabal-version: 3.4

name:                   effectful-zoo
version:                0.0.0.1
synopsis:               Effectful effects for testing
description:            See https://hackage.haskell.org/package/effectful-zoo/docs/effectful-zoo.html
category:               Development
homepage:               https://github.com/haskell-works/effectful-zoo#readme
bug-reports:            https://github.com/haskell-works/effectful-zoo/issues
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2024 John Ky
license:                BSD-3-Clause
license-file:           LICENSE
build-type:             Simple
extra-source-files:     README.md
                        CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/haskell-works/effectful-zoo

common base                       { build-depends: base                       >= 4.17.2.1   && < 4.20   }

common aeson                      { build-depends: aeson                      >= 2.2.3      && < 3      }
common aeson-pretty               { build-depends: aeson-pretty               >= 0.8.10     && < 1      }
common bytestring                 { build-depends: bytestring                 >= 0.11       && < 1      }
common effectful                  { build-depends: effectful                  >= 2.5        && < 3      }
common effectful-core             { build-depends: effectful-core             >= 2.5        && < 3      }
common effectful-plugin           { build-depends: effectful-plugin           >= 1.1.0.4    && < 2      }
common hedgehog                   { build-depends: hedgehog                   >= 1.5        && < 2      }
common hw-prelude                 { build-depends: hw-prelude                 >= 0.0.1.1    && < 0.2    }
common tasty                      { build-depends: tasty                      >= 1.4.3      && < 1.5    }
common tasty-hedgehog             { build-depends: tasty-hedgehog             >= 1.1.0.0    && < 1.5    }
common text                       { build-depends: text                       >= 2          && < 3      }
common time                       { build-depends: time                       >= 1.12       && < 2      }
common transformers               { build-depends: transformers               >= 0.5.6.2    && < 0.7    }
common yaml                       { build-depends: yaml                       >= 0.11.11.2  && < 1      }

common effectful-zoo-core         { build-depends: effectful-zoo:core                                   }
common effectful-zoo-datalog      { build-depends: effectful-zoo:datalog                                }
common effectful-zoo-hedgehog     { build-depends: effectful-zoo:hedgehog                               }
common effectful-zoo-log          { build-depends: effectful-zoo:log                                    }

common project-config
  default-extensions:   AllowAmbiguousTypes
                        ApplicativeDo
                        BlockArguments
                        DataKinds
                        DefaultSignatures
                        DeriveAnyClass
                        DerivingStrategies
                        DerivingVia
                        DisambiguateRecordFields
                        DuplicateRecordFields
                        FunctionalDependencies
                        GADTs
                        ImportQualifiedPost
                        LambdaCase
                        LiberalTypeSynonyms
                        MonadComprehensions
                        MultiWayIf
                        NoFieldSelectors
                        NoImplicitPrelude
                        OverloadedLabels
                        OverloadedLists
                        OverloadedRecordDot
                        OverloadedStrings
                        PackageImports
                        PartialTypeSignatures
                        PatternSynonyms
                        QuantifiedConstraints
                        QuasiQuotes
                        RecordWildCards
                        RecursiveDo
                        RoleAnnotations
                        TemplateHaskell
                        TypeFamilies
                        TypeFamilyDependencies
                        UndecidableInstances
                        UnicodeSyntax
                        ViewPatterns
  ghc-options:          -Wall
                        -Widentities
                        -Wincomplete-uni-patterns
                        -Wmissing-deriving-strategies
                        -Wredundant-constraints
                        -Wunused-packages
  default-language:     GHC2021

library core
  import:               project-config,
                        effectful,
  visibility:           public
  exposed-modules:      Effectful.Zoo.Core
  hs-source-dirs:       components/core

library datalog
  import:               base, project-config,
                        effectful-core,
                        effectful-plugin,
                        effectful-zoo-core,
                        effectful-zoo-log,
                        hw-prelude,
                        text,
                        time,
  visibility:           public
  exposed-modules:      Effectful.Zoo.DataLog.Api
                        Effectful.Zoo.DataLog.Data.LogEntry
                        Effectful.Zoo.DataLog.Data.Logger
                        Effectful.Zoo.DataLog.Dynamic
                        Effectful.Zoo.DataLog.Static
  ghc-options:          -fplugin=Effectful.Plugin
  hs-source-dirs:       components/datalog

library hedgehog
  import:               base, project-config,
                        aeson,
                        aeson-pretty,
                        bytestring,
                        effectful-core,
                        effectful-plugin,
                        effectful-zoo-core,
                        hedgehog,
                        hw-prelude,
                        tasty-hedgehog,
                        tasty,
                        text,
                        transformers,
                        yaml,
  visibility:           public
  exposed-modules:      Effectful.Zoo.Hedgehog
                        Effectful.Zoo.Hedgehog.Api
                        Effectful.Zoo.Hedgehog.Api.Assert
                        Effectful.Zoo.Hedgehog.Api.Classify
                        Effectful.Zoo.Hedgehog.Api.Eval
                        Effectful.Zoo.Hedgehog.Api.Failure
                        Effectful.Zoo.Hedgehog.Api.Journal
                        Effectful.Zoo.Hedgehog.Effect
                        Effectful.Zoo.Hedgehog.MonadTestProxy
                        Effectful.Zoo.Hedgehog.Run
  ghc-options:          -fplugin=Effectful.Plugin
  hs-source-dirs:       components/hedgehog

library log
  import:               base, project-config,
                        effectful-core,
                        effectful-plugin,
                        effectful-zoo-core,
                        hw-prelude,
                        text,
  visibility:           public
  exposed-modules:      Effectful.Zoo.Log.Api
                        Effectful.Zoo.Log.Data.LogMessage
                        Effectful.Zoo.Log.Data.Severity
                        Effectful.Zoo.Log.Effect
  ghc-options:          -fplugin=Effectful.Plugin
  hs-source-dirs:       components/log

test-suite effectful-zoo-test
  import:               project-config,
                        effectful-zoo-hedgehog,
                        hw-prelude,
                        tasty,
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  other-modules:        Effectful.Zoo.Hedgehog.Test.HedgehogTest
  hs-source-dirs:       components/hedgehog-test
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N
